--- a/src/content/generals/Pyrrhus.yaml
+++ b/src/content/generals/Pyrrhus.yaml
@@ -79,7 +79,7 @@ general:
       attribute:
       - level: Green
         buff:
-          - attribute: March Size Capacity
+          - attribute: March_Size_Capacity
             value:
               number: 1
               unit: percentage
@@ -97,7 +97,7 @@ general:
               unit: percentage
       - level: Blue
         buff:
-          - attribute: March Size Capacity
+          - attribute: March_Size_Capacity
             value:
               number: 1
               unit: percentage
@@ -115,7 +115,7 @@ general:
               unit: percentage
       - level: Purple
         buff:
-          - attribute: March Size Capacity
+          - attribute: March_Size_Capacity
             value:
               number: 1
               unit: percentage
@@ -133,7 +133,7 @@ general:
               unit: percentage
       - level: Orange
         buff:
-          - attribute: March Size Capacity
+          - attribute: March_Size_Capacity
             value:
               number: 1
               unit: percentage
@@ -151,7 +151,7 @@ general:
               unit: percentage
       - level: Gold
         buff:
-          - attribute: March Size Capacity
+          - attribute: March_Size_Capacity
             value:
               number: 2
               unit: percentage
@@ -411,15 +411,15 @@ general:
             unit: percentage
     - level: '7'
       buff:
-        - attribute: Death to Wounded
+        - attribute: Death_to_Wounded
           condition: Marching
           value:
             number: 10
             unit: percentage
     - level: '8'
       buff:
-        - attribute: Rally Capacity
-          condition: When Rallying
+        - attribute: Rally_Capacity
+          condition: When_Rallying
           value:
             number: 8
             unit: percentage
