--- a/src/content/generals/Poligenus.yaml
+++ b/src/content/generals/Poligenus.yaml
@@ -38,3 +38,323 @@ general:
           value:
             number: 25
             unit: percentage
+  specialities:
+    - name: Mounted Troop Assault
+      attribute:
+        - level: Green
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+            - attribute: HP
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+        - level: Blue
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+            - attribute: HP
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+        - level: Purple
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+            - attribute: HP
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+        - level: Orange
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+            - attribute: HP
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+        - level: Gold
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 4
+                unit: percentage
+            - attribute: HP
+              class: Mounted
+              value:
+                number: 4
+                unit: percentage
+    - name: Strike
+      attribute:
+        - level: Green
+          buff:
+            - attribute: Marching_Speed
+              value:
+                number: 1
+                unit: percentage
+            - attribute: Attack
+              condition: Marching
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+        - level: Blue
+          buff:
+            - attribute: Marching_Speed
+              value:
+                number: 1
+                unit: percentage
+            - attribute: Attack
+              condition: Marching
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+        - level: Purple
+          buff:
+            - attribute: Marching_Speed
+              value:
+                number: 2
+                unit: percentage
+            - attribute: Attack
+              condition: Marching
+              class: Mounted
+              value:
+                number: 4
+                unit: percentage
+        - level: Orange
+          buff:
+            - attribute: Marching_Speed
+              value:
+                number: 2
+                unit: percentage
+            - attribute: Attack
+              condition: Marching
+              class: Mounted
+              value:
+                number: 4
+                unit: percentage
+        - level: Gold
+          buff:
+            - attribute: Marching_Speed
+              value:
+                number: 4
+                unit: percentage
+            - attribute: Attack
+              condition: Marching
+              class: Mounted
+              value:
+                number: 8
+                unit: percentage
+    - name: War God
+      attribute:
+        - level: Green
+          buff:
+            - attribute: Attack
+              value:
+                number: 1
+                unit: percentage
+        - level: Blue
+          buff:
+            - attribute: Attack
+              value:
+                number: 1
+                unit: percentage
+        - level: Purple
+          buff:
+            - attribute: Attack
+              value:
+                number: 1
+                unit: percentage
+        - level: Orange
+          buff:
+            - attribute: Attack
+              value:
+                number: 1
+                unit: percentage
+        - level: Gold
+          buff:
+            - attribute: Attack
+              value:
+                number: 2
+                unit: percentage
+    - name: Firesworn
+      attribute:
+        - level: Green
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 4
+                unit: percentage
+            - attribute: Defense
+              class: Mounted
+              value:
+                number: 3
+                unit: percentage
+        - level: Blue
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 4
+                unit: percentage
+            - attribute: Defense
+              class: Mounted
+              value:
+                number: 4
+                unit: percentage
+        - level: Purple
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 8
+                unit: percentage
+            - attribute: Defense
+              class: Mounted
+              value:
+                number: 6
+                unit: percentage
+        - level: Orange
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 8
+                unit: percentage
+            - attribute: Defense
+              class: Mounted
+              value:
+                number: 7
+                unit: percentage
+        - level: Gold
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 16
+                unit: percentage
+            - attribute: Defense
+              class: Mounted
+              value:
+                number: 15
+                unit: percentage
+  ascending:
+    - level: '6'
+      buff:
+        - attribute: Attack
+          condition: Marching
+          class: Ground
+          value:
+            number: 5
+            unit: percentage
+        - attribute: Attack
+          condition: Marching
+          class: Mounted
+          value:
+            number: 5
+            unit: percentage
+        - attribute: Defense
+          class: Ground
+          value:
+            number: 5
+            unit: percentage
+        - attribute: Defense
+          class: Mounted
+          value:
+            number: 5
+            unit: percentage
+        - attribute: HP
+          class: Ground
+          value:
+            number: 5
+            unit: percentage
+        - attribute: HP
+          class: Mounted
+          value:
+            number: 5
+            unit: percentage
+    - level: '7'
+      buff:
+        - attribute: Wounded_to_Death
+          condition: Enemy_In_City
+          value:
+            number: 10
+            unit: percentage
+    - level: '8'
+      buff:
+        - attribute: Attack
+          condition: Attacking
+          class: Mounted
+          value:
+            number: 10
+            unit: percentage
+        - attribute: March_Size_Capacity
+          condition: Attacking
+          value:
+            number: 10
+            unit: percentage
+    - level: '9'
+      buff:
+        - attribute: Defense
+          condition: Marching
+          class: Ground
+          value:
+            number: 20
+            unit: percentage
+        - attribute: Defense
+          condition: Marching
+          class: Mounted
+          value:
+            number: 20
+            unit: percentage
+        - attribute: HP
+          condition: Marching
+          class: Ground
+          value:
+            number: 20
+            unit: percentage
+        - attribute: HP
+          condition: Marching
+          class: Mounted
+          value:
+            number: 20
+            unit: percentage
+    - level: '10'
+      buff:
+        - attribute: Attack
+          condition: Marching
+          class: Mounted
+          value:
+            number: 30
+            unit: percentage
+        - attribute: Defense
+          condition: Marching
+          class: Mounted
+          value:
+            number: 25
+            unit: percentage
+        - attribute: HP
+          condition: Marching
+          class: Mounted
+          value:
+            number: 25
+            unit: percentage
