--- a/src/content/generals/Aethelflaed.yaml
+++ b/src/content/generals/Aethelflaed.yaml
@@ -90,3 +90,297 @@ general:
           value:
             number: 10
             unit: percentage
+  specialities:
+    - name: Hunter
+      attribute:
+        - level: Green
+          buff:
+            - condition: Reduces_Monster
+              attribute: Attack
+              value:
+                number: 1
+                unit: percentage
+        - level: Blue
+          buff:
+            - condition: Reduces_Monster
+              attribute: Attack
+              value:
+                number: 2
+                unit: percentage
+        - level: Purple
+          buff:
+            - condition: Reduces_Monster
+              attribute: Attack
+              value:
+                number: 3
+                unit: percentage
+        - level: Orange
+          buff:
+            - condition: Reduces_Monster
+              attribute: Attack
+              value:
+                number: 3
+                unit: percentage
+        - level: Gold
+          buff:
+            - condition: Reduces_Monster
+              attribute: Attack
+              value:
+                number: 6
+                unit: percentage
+    - name: Fortune
+      attribute:
+        - level: Green
+          buff:
+            - condition: Against_Monsters
+              attribute: Double_Items_Drop_Rate
+              value:
+                number: 1
+                unit: percentage
+        - level: Blue
+          buff:
+            - condition: Against_Monsters
+              attribute: Double_Items_Drop_Rate
+              value:
+                number: 2
+                unit: percentage
+        - level: Purple
+          buff:
+            - condition: Against_Monsters
+              attribute: Double_Items_Drop_Rate
+              value:
+                number: 3
+                unit: percentage
+        - level: Orange
+          buff:
+            - condition: Against_Monsters
+              attribute: Double_Items_Drop_Rate
+              value:
+                number: 3
+                unit: percentage
+        - level: Gold
+          buff:
+            - condition: Against_Monsters
+              attribute: Double_Items_Drop_Rate
+              value:
+                number: 5
+                unit: percentage
+    - name: Mounted Troop Ares
+      attribute:
+        - level: Green
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+            - attribute: HP
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+            - attribute: Defense
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+        - level: Blue
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+            - attribute: HP
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+            - attribute: Defense
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+        - level: Purple
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+            - attribute: HP
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+            - attribute: Defense
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+        - level: Orange
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+            - attribute: HP
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+            - attribute: Defense
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+        - level: Gold
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 4
+                unit: percentage
+            - attribute: HP
+              class: Mounted
+              value:
+                number: 4
+                unit: percentage
+            - attribute: Defense
+              class: Mounted
+              value:
+                number: 4
+                unit: percentage
+    - name: Lord of the Mercians
+      attribute:
+        - level: Green
+          buff:
+            - attribute: Attack
+              class: Mounted
+              condition: Against_Monsters
+              value:
+                number: 3
+                unit: percentage
+            - attribute: Attack
+              class: Ground
+              condition: Against_Monsters
+              value:
+                number: 3
+                unit: percentage
+            - attribute: Defense
+              class: Mounted
+              condition: Against_Monsters
+              value:
+                number: 3
+                unit: percentage
+            - attribute: Defense
+              class: Ground
+              condition: Against_Monsters
+              value:
+                number: 3
+                unit: percentage
+        - level: Blue
+          buff:
+            - attribute: Attack
+              class: Mounted
+              condition: Against_Monsters
+              value:
+                number: 3
+                unit: percentage
+            - attribute: Attack
+              class: Ground
+              condition: Against_Monsters
+              value:
+                number: 3
+                unit: percentage
+            - attribute: Defense
+              class: Mounted
+              condition: Against_Monsters
+              value:
+                number: 3
+                unit: percentage
+            - attribute: Defense
+              class: Ground
+              condition: Against_Monsters
+              value:
+                number: 3
+                unit: percentage
+        - level: Purple
+          buff:
+            - attribute: Attack
+              class: Mounted
+              condition: Against_Monsters
+              value:
+                number: 6
+                unit: percentage
+            - attribute: Attack
+              class: Ground
+              condition: Against_Monsters
+              value:
+                number: 6
+                unit: percentage
+            - attribute: Defense
+              class: Mounted
+              condition: Against_Monsters
+              value:
+                number: 6
+                unit: percentage
+            - attribute: Defense
+              class: Ground
+              condition: Against_Monsters
+              value:
+                number: 6
+                unit: percentage
+        - level: Orange
+          buff:
+            - attribute: Attack
+              class: Mounted
+              condition: Against_Monsters
+              value:
+                number: 6
+                unit: percentage
+            - attribute: Attack
+              class: Ground
+              condition: Against_Monsters
+              value:
+                number: 6
+                unit: percentage
+            - attribute: Defense
+              class: Mounted
+              condition: Against_Monsters
+              value:
+                number: 6
+                unit: percentage
+            - attribute: Defense
+              class: Ground
+              condition: Against_Monsters
+              value:
+                number: 6
+                unit: percentage
+        - level: Gold
+          buff:
+            - attribute: Attack
+              class: Mounted
+              condition: Against_Monsters
+              value:
+                number: 12
+                unit: percentage
+            - attribute: Attack
+              class: Ground
+              condition: Against_Monsters
+              value:
+                number: 12
+                unit: percentage
+            - attribute: Defense
+              class: Mounted
+              condition: Against_Monsters
+              value:
+                number: 12
+                unit: percentage
+            - attribute: Defense
+              class: Ground
+              condition: Against_Monsters
+              value:
+                number: 12
+                unit: percentage
