--- a/src/content/generals/Mordred.yaml
+++ b/src/content/generals/Mordred.yaml
@@ -112,3 +112,317 @@ general:
           value:
             number: 5
             unit: percentage
+  specialities:
+    - name: Mounted Troop Formation
+      attribute:
+        - level: Green
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+            - attribute: Defense
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+        - level: Blue
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+            - attribute: Defense
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+        - level: Purple
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+            - attribute: Defense
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+        - level: Orange
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+            - attribute: Defense
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+        - level: Gold
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 4
+                unit: percentage
+            - attribute: Defense
+              class: Mounted
+              value:
+                number: 4
+                unit: percentage
+    - name: Formation
+      attribute:
+        - level: Green
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+            - attribute: Attack
+              class: Ground
+              value:
+                number: 1
+                unit: percentage
+        - level: Blue
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+            - attribute: Attack
+              class: Ground
+              value:
+                number: 1
+                unit: percentage
+        - level: Purple
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+            - attribute: Attack
+              class: Ground
+              value:
+                number: 2
+                unit: percentage
+        - level: Orange
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+            - attribute: Attack
+              class: Ground
+              value:
+                number: 2
+                unit: percentage
+        - level: Gold
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 4
+                unit: percentage
+            - attribute: Attack
+              class: Ground
+              value:
+                number: 4
+                unit: percentage
+    - name: Mounted Troop Ares
+      attribute:
+        - level: Green
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+            - attribute: HP
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+            - attribute: Defense
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+        - level: Blue
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+            - attribute: HP
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+            - attribute: Defense
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+        - level: Purple
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+            - attribute: HP
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+            - attribute: Defense
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+        - level: Orange
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+            - attribute: HP
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+            - attribute: Defense
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+        - level: Gold
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 4
+                unit: percentage
+            - attribute: HP
+              class: Mounted
+              value:
+                number: 4
+                unit: percentage
+            - attribute: Defense
+              class: Mounted
+              value:
+                number: 4
+                unit: percentage
+    - name: Battle of Camlann
+      attribute:
+        - level: Green
+          buff:
+            - attribute: Attack
+              class: Mounted
+              condition: Marching
+              value:
+                number: 4
+                unit: percentage
+            - attribute: HP
+              class: Mounted
+              condition: Attacking
+              value:
+                number: 2
+                unit: percentage
+            - attribute: HP
+              class: Ground
+              condition: Attacking
+              value:
+                number: 2
+                unit: percentage
+        - level: Blue
+          buff:
+            - attribute: Attack
+              class: Mounted
+              condition: Marching
+              value:
+                number: 4
+                unit: percentage
+            - attribute: HP
+              class: Mounted
+              condition: Attacking
+              value:
+                number: 2
+                unit: percentage
+            - attribute: HP
+              class: Ground
+              condition: Attacking
+              value:
+                number: 2
+                unit: percentage
+        - level: Purple
+          buff:
+            - attribute: Attack
+              class: Mounted
+              condition: Marching
+              value:
+                number: 8
+                unit: percentage
+            - attribute: HP
+              class: Mounted
+              condition: Attacking
+              value:
+                number: 4
+                unit: percentage
+            - attribute: HP
+              class: Ground
+              condition: Attacking
+              value:
+                number: 4
+                unit: percentage
+        - level: Orange
+          buff:
+            - attribute: Attack
+              class: Mounted
+              condition: Marching
+              value:
+                number: 8
+                unit: percentage
+            - attribute: HP
+              class: Mounted
+              condition: Attacking
+              value:
+                number: 4
+                unit: percentage
+            - attribute: HP
+              class: Ground
+              condition: Attacking
+              value:
+                number: 4
+                unit: percentage
+        - level: Gold
+          buff:
+            - attribute: Attack
+              class: Mounted
+              condition: Marching
+              value:
+                number: 16
+                unit: percentage
+            - attribute: HP
+              class: Mounted
+              condition: Attacking
+              value:
+                number: 8
+                unit: percentage
+            - attribute: HP
+              class: Ground
+              condition: Attacking
+              value:
+                number: 8
+                unit: percentage
