--- a/src/content/generals/Hannibal.yaml
+++ b/src/content/generals/Hannibal.yaml
@@ -135,3 +135,253 @@ general:
           value:
             number: 20
             unit: percentage
+  specialities:
+    - name: Mounted Troop Assault
+      attribute:
+        - level: Green
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+            - attribute: HP
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+        - level: Blue
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+            - attribute: HP
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+        - level: Purple
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+            - attribute: HP
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+        - level: Orange
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+            - attribute: HP
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+        - level: Gold
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 4
+                unit: percentage
+            - attribute: HP
+              class: Mounted
+              value:
+                number: 4
+                unit: percentage
+    - name: Formation
+      attribute:
+        - level: Green
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+            - attribute: Attack
+              class: Ground
+              value:
+                number: 1
+                unit: percentage
+        - level: Blue
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+            - attribute: Attack
+              class: Ground
+              value:
+                number: 1
+                unit: percentage
+        - level: Purple
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+            - attribute: Attack
+              class: Ground
+              value:
+                number: 2
+                unit: percentage
+        - level: Orange
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+            - attribute: Attack
+              class: Ground
+              value:
+                number: 2
+                unit: percentage
+        - level: Gold
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 4
+                unit: percentage
+            - attribute: Attack
+              class: Ground
+              value:
+                number: 4
+                unit: percentage
+    - name: Mounted Troop Ares
+      attribute:
+        - level: Green
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+            - attribute: HP
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+            - attribute: Defense
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+        - level: Blue
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+            - attribute: HP
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+            - attribute: Defense
+              class: Mounted
+              value:
+                number: 1
+                unit: percentage
+        - level: Purple
+          buff:
+            - attribute: Attack
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+            - attribute: HP
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+            - attribute: Defense
+              class: Mounted
+              value:
+                number: 2
+                unit: percentage
+    - name: Battle of Cannae
+      attribute:
+        - level: Green
+          buff:
+            - attribute: Attack
+              condition: Marching
+              class: Mounted
+              value:
+                number: 4
+                unit: percentage
+            - attribute: HP
+              condition: Marching
+              class: Mounted
+              value:
+                number: 4
+                unit: percentage
+        - level: Blue
+          buff:
+            - attribute: Attack
+              condition: Marching
+              class: Mounted
+              value:
+                number: 4
+                unit: percentage
+            - attribute: HP
+              condition: Marching
+              class: Mounted
+              value:
+                number: 4
+                unit: percentage
+        - level: Purple
+          buff:
+            - attribute: Attack
+              condition: Marching
+              class: Mounted
+              value:
+                number: 7
+                unit: percentage
+            - attribute: HP
+              condition: Marching
+              class: Mounted
+              value:
+                number: 7
+                unit: percentage
+        - level: Orange
+          buff:
+            - attribute: Attack
+              condition: Marching
+              class: Mounted
+              value:
+                number: 7
+                unit: percentage
+            - attribute: HP
+              condition: Marching
+              class: Mounted
+              value:
+                number: 7
+                unit: percentage
+        - level: Gold
+          buff:
+            - attribute: Attack
+              condition: Marching
+              class: Mounted
+              value:
+                number: 14
+                unit: percentage
+            - attribute: HP
+              condition: Marching
+              class: Mounted
+              value:
+                number: 14
+                unit: percentage
