a bunch of conflict data from evonyanswers

--- a/src/content/generalConflictData/20231026-1.yml
+++ b/src/content/generalConflictData/20231026-1.yml
@@ -2,3 +2,11 @@
 conflicts:
   b:
     - Scipio Africanus
+  other:
+    - Ludwig
+    - Aurelian
+    - Elise
+    - Maeda Toshiie
+    - Guan Yu
+    - Alexander the Great
+    - Carus
