--- a/src/content/generalConflictData/20231026-10.yml
+++ b/src/content/generalConflictData/20231026-10.yml
@@ -2,3 +2,10 @@
 conflicts:
   s:
     - El Cid
+  other:
+    - Hannibal
+    - Basil II
+    - Poligenus
+    - Prince Rhaeger
+    - Zhao Yun
+    - Yue Fei
