--- a/src/content/generalConflictData/20231026-11.yml
+++ b/src/content/generalConflictData/20231026-11.yml
@@ -2,3 +2,17 @@
 conflicts:
   t:
     - Hannibal
+  other:
+    - Lysander
+    - Gaius Octavius
+    - Bertrand du Guesclin
+    - Cyrus the Great
+    - George A. Custer
+    - Barbarossa
+    - Mordred
+    - Roland
+    - El Cid
+    - Basil II
+    - Poligenus
+    - Zhao Yun
+    - Yue Fei
