--- a/src/content/generalConflictData/20231026-15.yml
+++ b/src/content/generalConflictData/20231026-15.yml
@@ -2,3 +2,13 @@
 conflicts:
   w:
     - Ii Naomasa
+  other:
+    - Laudon
+    - Prince Eugene
+    - Martinus
+    - Li Jing
+    - Robert Guiscard
+    - Washington
+    - Xiang Yu
+    - Honda Tadakatsu
+    - Khalid
