--- a/src/content/generalConflictData/20231026-16.yml
+++ b/src/content/generalConflictData/20231026-16.yml
@@ -3,3 +3,13 @@ conflicts:
   x:
     - Honda Tadakatsu
     - Khalid
+  other:
+    - Laudon
+    - Prince Eugene
+    - Martinus
+    - Li Jing
+    - Robert Guiscard
+    - Washington
+    - Xiang Yu
+    - Ii Naomasa
+
