--- a/src/content/generalConflictData/20231026-23.yml
+++ b/src/content/generalConflictData/20231026-23.yml
@@ -2,3 +2,14 @@
 conflicts:
   d:
     - Yue Fei
+  other:
+    - Ludwig
+    - Aurelian
+    - Elise
+    - Maeda Toshiie
+    - Guan Yu
+    - Alexander the Great
+    - Carus
+    - Basil II
+    - Hannibal
+    - El Cid
