--- a/src/content/generalConflictData/20231026-5.yml
+++ b/src/content/generalConflictData/20231026-5.yml
@@ -6,3 +6,7 @@ conflicts:
     - Gaius Octavius
     - Bertrand du Guesclin
     - Cyrus the Great
+  other:
+    - George A. Custer
+    - Barbarossa
+    - Hannibal
