--- a/src/content/generalConflictData/20231026-6.yml
+++ b/src/content/generalConflictData/20231026-6.yml
@@ -3,3 +3,13 @@ conflicts:
   o:
     - George A. Custer
     - Barbarossa
+  other:
+    - Roland
+    - Lysander
+    - Gaius Octavius
+    - Bertrand du Guesclin
+    - Cyrus the Great
+    - Hannibal
+    - King Arthur
+    - Genghis Khan
+    - Mordred
