--- a/src/content/generalConflictData/20231026-7.yml
+++ b/src/content/generalConflictData/20231026-7.yml
@@ -2,3 +2,13 @@
 conflicts:
   p:
     - Mordred
+  other:
+    - Lysander
+    - Gaius Octavius
+    - Bertrand du Guesclin
+    - Cyrus the Great
+    - George A. Custer
+    - Barbarossa
+    - Roland
+    - Hannibal
+    - Basil II
