--- a/src/content/generalConflictData/20231026-8.yml
+++ b/src/content/generalConflictData/20231026-8.yml
@@ -2,3 +2,13 @@
 conflicts:
   q:
     - Roland
+  other:
+    - Lysander
+    - Gaius Octavius
+    - Bertrand du Guesclin
+    - Cyrus the Great
+    - Mordred
+    - George A. Custer
+    - Barbarossa
+    - Hannibal
+    - Poligenus
