--- a/src/content/generals/Suleiman.yaml
+++ b/src/content/generals/Suleiman.yaml
@@ -80,35 +80,35 @@ general:
         - level: Green
           buff:
             - attribute: Defense
-              condition: Enemy
+              condition: Reduces_Enemy
               value:
                 number: -1
                 unit: percentage
         - level: Blue
           buff:
             - attribute: Defense
-              condition: Enemy
+              condition: Reduces_Enemy
               value:
                 number: -1
                 unit: percentage
         - level: Purple
           buff:
             - attribute: Defense
-              condition: Enemy
+              condition: Reduces_Enemy
               value:
                 number: -2
                 unit: percentage
         - level: Orange
           buff:
             - attribute: Defense
-              condition: Enemy
+              condition: Reduces_Enemy
               value:
                 number: -2
                 unit: percentage
         - level: Gold
           buff:
             - attribute: Defense
-              condition: Enemy
+              condition: Reduces_Enemy
               value:
                 number: -4
                 unit: percentage
@@ -209,7 +209,7 @@ general:
                 number: 3
                 unit: percentage
             - attribute: HP
-              condition: Enemy
+              condition: Reduces_Enemy
               value:
                 number: -1
                 unit: percentage
@@ -221,7 +221,7 @@ general:
                 number: 3
                 unit: percentage
             - attribute: HP
-              condition: Enemy
+              condition: Reduces_Enemy
               value:
                 number: -1
                 unit: percentage
@@ -233,7 +233,7 @@ general:
                 number: 5
                 unit: percentage
             - attribute: HP
-              condition: Enemy
+              condition: Reduces_Enemy
               value:
                 number: -2
                 unit: percentage
@@ -245,7 +245,7 @@ general:
                 number: 5
                 unit: percentage
             - attribute: HP
-              condition: Enemy
+              condition: Reduces_Enemy
               value:
                 number: -2
                 unit: percentage
@@ -257,7 +257,25 @@ general:
                 number: 10
                 unit: percentage
             - attribute: HP
-              condition: Enemy
+              condition: Reduces_Enemy
               value:
                 number: -4
                 unit: percentage
+  books:
+    - name: Indefectible Emperor
+      buff:
+        - attribute: Attack
+          class: Archers
+          value:
+            number: 15
+            unit: percentage
+        - attribute: Attack
+          class: Siege
+          value:
+            number: 15
+            unit: percentage
+        - attribute: Defense
+          condition: Reduces_Enemy
+          value:
+            number: -10
+            unit: percentage
