--- a/src/content/generalConflictData/20231030-5.yml
+++ b/src/content/generalConflictData/20231030-5.yml
@@ -1,4 +1,3 @@
----
 conflicts:
   e:
     - Edward Teach
@@ -6,5 +5,5 @@ conflicts:
     - Suleiman the Magnificent
     - Gustavus Adolphus
     - Gwanggaeto the Great
-
+    - Ramesses II
 
