--- a/src/content/generalConflictData/20231030-6.yml
+++ b/src/content/generalConflictData/20231030-6.yml
@@ -1,4 +1,3 @@
----
 conflicts:
   f:
     - Surena
@@ -8,3 +7,13 @@ conflicts:
     - William Wallace
     - Khalid
 
+books:
+  - name: Siege Attack
+    level: '1'
+    buff:
+      - attribute: Attack
+        class: Siege
+        value:
+          number: 10
+          unit: percentage
+  
