some simple fixes to minor things

--- a/src/content/generalConflictData/20231026-6.yml
+++ b/src/content/generalConflictData/20231026-6.yml
@@ -17,6 +17,7 @@ books:
     level: '1'
     buff:
       - attribute: March_Size_Capacity
+        condition: When_Not_Mine
         value:
           number: 3
           unit: percentage
@@ -24,6 +25,7 @@ books:
     level: '2'
     buff:
       - attribute: March_Size_Capacity
+        condition: When_Not_Mine
         value:
           number: 6
           unit: percentage
@@ -31,6 +33,7 @@ books:
     level: '3'
     buff:
       - attribute: March_Size_Capacity
+        condition: When_Not_Mine
         value:
           number: 9
           unit: percentage
@@ -38,6 +41,7 @@ books:
     level: '4'
     buff:
       - attribute: March_Size_Capacity
+        condition: When_Not_Mine
         value:
           number: 12
           unit: percentage
